# safeContext

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  AGENTS.md  CLAUDE.md  PLAN-VALIDACION-POR-FASES.md  README.md  WORKSPACE.md  docker-compose.yml
.claude/: settings.local.json
.github/: secret_scanning.yml
.github/workflows/: build-sign.yml  ci-selfhosted.yml  ci.yml  deploy.yml  policy-exception.yml  sbom.yml  security-scan.yml
apps/api/: .dockerignore  CHANGELOG.md  Dockerfile  alembic.ini  config.py  conftest.py  main.py  pyproject.toml  requirements.txt
apps/api/adapters/: redis_broker.py
apps/api/api/v1/: admin_retention.py  admin_siem.py  admin_tenants.py  audit.py  compliance.py  health.py  operations.py  retention.py  review.py  router.py  scan.py  waivers.py
apps/api/core/: auth_oidc.py  chain.py  constants.py  internal_auth.py  logging.py  metrics.py  ports.py  quotas.py  retention_gdpr.py  siem.py  tenant.py  tracing.py  tsa.py  vault_transit.py  worm.py
apps/api/db/: __init__.py  enums.py  evidence.py  session.py
apps/api/db/migrations/: env.py
apps/api/db/migrations/versions/: 0001_initial_schema.py  0002_add_agent_approval.py  0003_outbox_payload_operation_id_index.py  0004_operation_sanitized_text_and_digest_index.py  0005_partition_operations_findings.py  0006_add_waivers.py  0007_unique_finding_span.py  0008_add_tenants.py  0009_enable_rls.py  0010_add_chain_hash.py  0011_add_tenant_config_columns.py  0012_writetime_signature_and_chain_anchors.py  0013_signing_keys_archive.py
apps/api/db/models/: __init__.py  artifact.py  chain_anchor.py  finding.py  operation.py  outbox.py  redaction.py  signing_key.py  tenant.py  waiver.py
apps/api/mcp/: __init__.py  auth.py  router.py  schemas.py  scopes.py  tools.py
apps/api/schemas/: audit.py  compliance.py  health.py  sarif.py  scan.py
apps/api/tests/api/: test_admin_retention.py  test_admin_siem.py  test_admin_tenants.py  test_admin_tenants_config.py  test_audit.py  test_compliance.py  test_evidence.py  test_operations.py  test_quotas.py  test_retention.py  test_retention_gdpr.py  test_review.py  test_scan.py  test_siem.py  test_verify_offline.py  test_waivers.py
apps/api/tests/db/: test_schema.py
apps/api/tests/mcp/: test_mcp_oauth.py  test_mcp_scopes.py  test_mcp_tools.py  test_mcp_versioning.py
apps/docs/: DOC-0_UNIFIED.md  DOC-1_PRD.md  DOC-2_SAD.md  DOC-3_SPEC.md  DOC-PRODUCTO.md  GLOSSARY.md  ROADMAP.md  SKILLS.md
apps/policies/: README.md
apps/tools/: verify_offline.py
apps/ui/: .dockerignore  Dockerfile  cache-handler.js  cache-handler.ts  jest.config.js  (+7 more)
apps/workers/: Dockerfile  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
apps/workers/adapters/: __init__.py  redis_broker.py
apps/workers/agents/: __init__.py  auditor_agent.py  classifier_agent.py  detector_agent.py  rescan_agent.py  reviewer_agent.py  sanitizer_agent.py
apps/workers/core/: __init__.py  db.py  detector.py  dlq_monitor.py  opa_client.py  outbox_relay.py
apps/workers/ml/: presidio_detector.py  regex_detector.py
apps/workers/tests/: conftest.py  test_rescan.py
apps/workers/tests/fixtures/corpus/: corpus.json
apps/workers/tests/ml/: __init__.py  test_offline_models.py  test_recall.py  test_regex_detector.py
docs/: DOC-0_UNIFIED.md  DOC-2_SAD.md  DOC-3_SPEC.md  ROADMAP.md
scripts/: compliance-check.sh
tests/: final-validation.sh  quick-validation.py
workers/: .dockerignore  Dockerfile  db.py  dlq_monitor.py  main.py  outbox_relay.py  pyproject.toml  requirements.txt
workers/adapters/: redis_broker.py  s3_storage.py
workers/agents/: auditor_agent.py  classifier_agent.py  detector_agent.py  reviewer_agent.py  sanitizer_agent.py
workers/core/: db.py  detector.py  metrics.py  opa_client.py  ports.py
workers/ml/: __init__.py  model_loader.py  presidio_detector.py  recall_evaluator.py
workers/tests/: __init__.py
workers/tests/fixtures/corpus/: corpus.json
workers/tests/ml/: test_offline_models.py  test_recall.py
workers/tests/workers/: __init__.py  test_idempotency.py  test_opa_hot_reload.py
(+205 files in other folders)
