[project]
name = "safecontext-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.13.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    "dramatiq[redis]>=1.18.0",
    "boto3>=1.34.0",
    "httpx>=0.28.1",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.8.0",
    "prometheus-client>=0.20.0",
    "PyJWT[crypto]>=2.10.0",
    "redis>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
