[project]
name = "safecontext-workers"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dramatiq[redis]>=1.18.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.8.0",
    "boto3>=1.34.0",
    "redis>=5.3.0",
    "httpx>=0.28.1",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "prometheus-client>=0.20.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
